<?xml version="1.0" encoding="utf-8"?>
<!-- Settings: dark theme switch (state saved in SharedPreferences in SettingsActivity). -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvThemeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/theme_mode"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/switchTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle" />

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        app:layout_constraintBaseline_toBaselineOf="@id/tvThemeLabel"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
